...


    <item
        android:id="@+id/nav_events_home"
        android:title="Home"/>
    <item
        android:id="@+id/nav_create_event"
        android:title="Create Event"/>
    <item
        android:id="@+id/nav_all_events"
        android:title="All Events"/>
    <item
        android:id="@+id/nav_profile"
...
